@@ -1,1 +1,7 @@
 SUBDIRS = libltdl src drivers include lib bindings examples
+bin_SCRIPTS = plplot_libtool
+
+plplot_libtool: libtool
+	cp libtool plplot_libtool
+
+CLEANFILES = plplot_libtool
