@@ -1,6 +1,6 @@
-# examples/c/Makefile.am for PLplot
+# examples/c++/Makefile.examples.in for PLplot
 ###
-### Process this file with automake to produce Makefile.in
+### Process this file with configure to produce Makefile.examples
 ###
 # Copyright (C) 2002 Alan W. Irwin
 # 
@@ -19,9 +19,10 @@
 #along with the file; if not, write to the Free Software
 #Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
 
-AM_CPPFLAGS = @INCLTDL@
-examples_cxxdir = ${prefix}/@DATA_DIR@/../examples/c++
-examples_cxx_DATA = \
-Makefile.examples \
-x01cc.cc
-EXTRA_DIST = $(examples_cxx_DATA) Makefile.examples.in
+INCLUDEANDLIB = -I@INCLUDE_DIR@ -L@LIB_DIR@ -lplplot@LIB_TAG@
+
+all: x01cc
+
+x01cc: x01cc.cc
+	plplot_libtool g++ x01c.c $(INCLUDEANDLIB) -o x01cc
+
