@@ -1,0 +1,86 @@
+# examples/c/Makefile.examples.in for PLplot
+###
+### Process this file with configure to produce Makefile.examples
+###
+# Copyright (C) 2002 Alan W. Irwin
+# 
+#This file is part of PLplot.
+#
+#This file is free software; you can redistribute it and/or modify
+#it under the terms of the GNU Library General Public License as published by
+#the Free Software Foundation; version 2 of the License.
+#
+#This file is distributed in the hope that it will be useful,
+#but WITHOUT ANY WARRANTY; without even the implied warranty of
+#MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#GNU Library General Public License for more details.
+#
+#You should have received a copy of the GNU Library General Public License
+#along with the file; if not, write to the Free Software
+#Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
+
+INCLUDEANDLIB = -I@INCLUDE_DIR@ -L@LIB_DIR@ -lplplot@LIB_TAG@ 
+
+all: x01c x02c x03c x04c x05c x06c x07c x08c x09c x10c \
+	x11c x12c x13c x14c x15c x16c x17c x18c x19c x20c 
+
+x01c: x01c.c
+	plplot_libtool gcc x01c.c $(INCLUDEANDLIB) -o x01c
+
+x02c: x02c.c
+	plplot_libtool gcc x02c.c $(INCLUDEANDLIB) -o x02c
+
+x03c: x03c.c
+	plplot_libtool gcc x03c.c $(INCLUDEANDLIB) -o x03c
+
+x04c: x04c.c
+	plplot_libtool gcc x04c.c $(INCLUDEANDLIB) -o x04c
+
+x05c: x05c.c
+	plplot_libtool gcc x05c.c $(INCLUDEANDLIB) -o x05c
+
+x06c: x06c.c
+	plplot_libtool gcc x06c.c $(INCLUDEANDLIB) -o x06c
+
+x07c: x07c.c
+	plplot_libtool gcc x07c.c $(INCLUDEANDLIB) -o x07c
+
+x08c: x08c.c
+	plplot_libtool gcc x08c.c $(INCLUDEANDLIB) -o x08c
+
+x09c: x09c.c
+	plplot_libtool gcc x09c.c $(INCLUDEANDLIB) -o x09c
+
+x10c: x10c.c
+	plplot_libtool gcc x10c.c $(INCLUDEANDLIB) -o x10c
+
+x11c: x11c.c
+	plplot_libtool gcc x11c.c $(INCLUDEANDLIB) -o x11c
+
+x12c: x12c.c
+	plplot_libtool gcc x12c.c $(INCLUDEANDLIB) -o x12c
+
+x13c: x13c.c
+	plplot_libtool gcc x13c.c $(INCLUDEANDLIB) -o x13c
+
+x14c: x14c.c
+	plplot_libtool gcc x14c.c $(INCLUDEANDLIB) -o x14c
+
+x15c: x15c.c
+	plplot_libtool gcc x15c.c $(INCLUDEANDLIB) -o x15c
+
+x16c: x16c.c
+	plplot_libtool gcc x16c.c $(INCLUDEANDLIB) -o x16c
+
+x17c: x17c.c
+	plplot_libtool gcc x17c.c $(INCLUDEANDLIB) -o x17c
+
+x18c: x18c.c
+	plplot_libtool gcc x18c.c $(INCLUDEANDLIB) -o x18c
+
+x19c: x19c.c
+	plplot_libtool gcc x19c.c $(INCLUDEANDLIB) -o x19c
+
+x20c: x20c.c
+	plplot_libtool gcc x20c.c $(INCLUDEANDLIB) -o x20c
+
