@@ -1,7 +1,9 @@
 2002-11-26  Alan W. Irwin <irwin@beluga.phys.uvic.ca>
 
 	* Support for examples/c examples/c++ and examples/f77 on AT
-	  branch
+	  branch.
+	* Makefile.examples using plplot_libtool
+	* Adopt Maurice's idea of initializing libltdl in pllib_init().
 
 2002-11-25  Alan W. Irwin <irwin@beluga.phys.uvic.ca>
 
